--- a/meson.build
+++ b/meson.build
@@ -15,16 +15,13 @@ if not vala.version().version_compare('>= @0@'.format(vala_version_required))
 endif
 
 # Imports
-gnome = import ('gnome')
+pkg = import('pkgconfig')
 
 # Dependencies
 glib_min_version = '2.40.0'
-
-glib_dep = dependency ('glib-2.0', version: '>= ' + glib_min_version)
-gio_dep = dependency ('gio-2.0', version: '>= ' + glib_min_version)
-gobject_dep = dependency ('gobject-2.0', version: '>= ' + glib_min_version)
-gthread_dep = dependency ('gthread-2.0', version: '>= ' + glib_min_version)
+glib_dep = dependency ('glib-2.0', version: '>=' + glib_min_version)
+gobject_dep = dependency ('gobject-2.0', version: '>=' + glib_min_version)
 gee_dep = dependency ('gee-0.8', version: '>=0.20.0')
 
-subdir ('src')
+subdir ('lib')
 subdir ('test')
