--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,11 @@
-language: c
-sudo: required
+language: generic
 
-compiler:
-  - gcc
-  - clang
+services:
+  - docker
 
-before_install:
-  - sudo add-apt-repository ppa:vala-team/ppa -y
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq build-essential cmake libglib2.0-dev libgee-0.8 valac python3-pip
-  - pip3 install --user meson
-  - mkdir -p $HOME/bin
-  - curl -L https://github.com/ninja-build/ninja/releases/download/v1.8.2/ninja-linux.zip -o ninja-linux.zip
-  - unzip ninja-linux.zip -d $HOME/bin
-  - chmod a+x $HOME/bin/ninja
-  - export PATH=$PATH:$HOME/bin
+env:
+  - DEPENDENCY_PACKAGES="meson valac libgee-0.8 ninja-build"
 
-before_script:
-  - PATH=$PATH:$HOME/bin meson builddir
-  - cd builddir
-
-script: ninja && test/libbalistica-test
-
-
+install:
+  - docker pull ubuntu:bionic
+  - docker run -v "$PWD":/tmp/build-dir ubuntu:bionic /bin/sh -c "apt-get update && apt-get -y install git valac libgee-0.8 python3-pip ninja-build meson && git clone https://github.com/steveno/libbalistica.git && cd libbalistica && mkdir build && meson . build/ && cd build && ninja && test/libbalistica-test"
