--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,23 @@
 language: c
 sudo: required
+cache: apt
+os: linux
+dist: bionic
 
 compiler:
   - gcc
-  - clang
 
 before_install:
   - sudo add-apt-repository ppa:vala-team/ppa -y
   - sudo apt-get update -qq
-  - sudo apt-get install -qq build-essential cmake libglib2.0-dev libgee-0.8 valac python3-pip
-  - pip3 install --user meson
-  - mkdir -p $HOME/bin
-  - curl -L https://github.com/ninja-build/ninja/releases/download/v1.8.2/ninja-linux.zip -o ninja-linux.zip
-  - unzip ninja-linux.zip -d $HOME/bin
-  - chmod a+x $HOME/bin/ninja
-  - export PATH=$PATH:$HOME/bin
+  - sudo apt-get install valac libgee-0.8 libgtk-3-dev python3-pip ninja-build
+  - sudo pip3 install --upgrade setuptools
+  - sudo pip3 install meson
 
-before_script:
-  - PATH=$PATH:$HOME/bin meson builddir
-  - cd builddir
-
-script: ninja && test/libbalistica-test
-
-
+script:
+  - wget https://github.com/steveno/libbalistica/archive/1.0.tar.gz
+  - tar -zxvf 1.0.tar.gz
+  - cd libbalistica-1.0/ && mkdir build
+  - meson . build/
+  - cd build && ninja
+  - test/libbalistica-test
