Build the master branch by default

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,7 @@ before_install:
   - sudo pip3 install meson
 
 script:
-  - wget https://github.com/steveno/libbalistica/archive/1.0.tar.gz
-  - tar -zxvf 1.0.tar.gz
-  - cd libbalistica-1.0/ && mkdir build
+  - cd libbalistica/ && mkdir build
   - meson . build/
   - cd build && ninja
   - test/libbalistica-test
